# blop

./: Makefile  README  TODO  changelog  config.mk  config.mk.in  config.status  configure  configure.ac  deb.mk  rpm.mk
.gitignore/: .gitignore
doc/: Makefile  default.css  download.html  faq.html  help-index  index.html  introduction.html  mailing.html  srchtml2html.pl  test.C  test.ps  test.tex  tip-of-the-day
doc/documentation/: Makefile  about-this-doc.html  about-this-doc.srchtml  acknowledgements.html  acknowledgements.srchtml  annotating-plots.html  annotating-plots.srchtml  arc.cc.html  arc.h.html  array.cc.html  array.h.html  array.html  array.srchtml  arrowhead.cc.html  arrowhead.h.html  axis-cut.html  axis-cut.srchtml  axis-pos.html  axis-pos.srchtml  axis-tics.html  axis-tics.srchtml  axis-transform.html  axis-transform.srchtml  axis.cc.html  axis.h.html  blop_bookkeeper.cc.html  blop_bookkeeper.h.html  blop_cint.cc.html  blop_gts.cc.html  blop_gts.h.html  blop_nocint.cc.html  blop_time.cc.html  blopeps.cc.html  blopeps.h.html  blopeps.html  blopeps.srchtml  bloputils.cc.html  bloputils.h.html  bmp.cc.html  bmp.h.html  (+233 more)
doc/documentation/figs/: Makefile  axis-cut.C  axis-cut.pnm  axis-cut.tex  axis-pos.C  axis-pos.pnm  axis-pos.tex  fft.C  fft.tex  frame.C  frame.pnm  frame.tex  graphd-band.C  graphd-band.pnm  graphd-band.tex  graphd-bars.C  graphd-bars.pnm  graphd-bars.tex  graphd-cbox.C  graphd-cbox.pnm  graphd-cbox.tex  graphd-cpoints.C  graphd-cpoints.pnm  graphd-cpoints.tex  graphd-csbox.C  graphd-csbox.pnm  graphd-csbox.tex  graphd-errorbars.C  graphd-errorbars.pnm  graphd-errorbars.tex  graphd-histo.C  graphd-histo.pnm  graphd-histo.tex  graphd-isolines.C  graphd-isolines.tex  graphd-labels.C  graphd-labels.tex  graphd-lines.C  graphd-lines.tex  graphd-mosaic.C  (+23 more)
doc/examples/: Makefile  data  example1.C  example1.tex  example2.C  example2.tex  example3.C  example3.tex  example4.C  example4.tex  index.html
doc/tutorial/: Makefile  index.html
doc/user-examples/: Makefile  README.html  RLC-resonator.C  circular-waveguide.C  smith.h  units.h
latex/: Makefile  blopeps.sty  blopeps.sty.save  tmp
man/: Makefile  blop.man
scripts/: Makefile  beps-annotate  beps2bmp  beps2eps  beps2jpg  beps2pdf  beps2pdf.save  beps2png  bepsview  blop  blop-config  blop-config-vars  blop-helpviewer  blop-terminal  bloprc.C  ps2eps-blop
src/: Makefile  a.out  arc.cc  arc.d  arc.h  array.cc  array.d  array.h  arrowhead.cc  arrowhead.d  arrowhead.h  axis.cc  axis.d  axis.h  blop_bookkeeper.cc  blop_bookkeeper.d  blop_bookkeeper.h  blop_cint.cc  blop_gts.cc  blop_gts.d  blop_gts.h  blop_nocint.cc  blop_nocint.d  blop_time.cc  blop_time.d  blop_time.hh  blopeps.cc  blopeps.d  blopeps.h  bloputils.cc  bloputils.d  bloputils.h  bmp.cc  bmp.d  bmp.h  box.cc  box.d  box.h  call_user_init.C  canvas.cc  (+205 more)
src/new-func/: function.cc  function.h  function_core.H  function_core.cc  function_core.d
test.dir/: Makefile  a.out  data  debug  non-segmented-electrode.fld  proba.C  segmented-electrode.fld  test.C  test.tex
tools/: Makefile  blop-help  blop-help.cc  blop-help.d  blop-merge  blop-merge.cc  blop-merge.d
